docs/deployment/mock-tweet-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: "staging"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-tweet
  namespace: staging
spec:
  selector:
    matchLabels:
      app: mock-tweet
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mock-tweet
      annotations:
        checksum/deployment: TMP_DEP_CHECKSUM
    spec:
      containers:
      - name: mock-tweet
        image: bxcodec/mock-tweet:latest
        imagePullPolicy: Always
        args: ["/data/openapi.yaml"]
        resources:
          limits:
            cpu: 100m
            memory: 64M
          requests:
            cpu: 50m
            memory: 16M

---
kind: Service
apiVersion: v1
metadata:
  name: mock-tweet
  namespace: staging
spec:
  type: NodePort
  selector:
    app: mock-tweet
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: mock-tweet
